hphp/hack/test/typecheck/new_inference/eager_solve/varargs.php.like_types.exp
File "varargs.php", line 13, characters 20-22:
Invalid argument (Typing[4110])
File "varargs.php", line 13, characters 20-22:
Expected Traversable<string> (it is unpacked with '...')
File "varargs.php", line 12, characters 9-45:
But got ((string | [unresolved]), (string | [unresolved]))
File "varargs.php", line 13, characters 10-23:
Too few arguments (required 1 but got 0) (Typing[4104])
File "varargs.php", line 3, characters 10-15:
Definition is here
